# booze-buddy

./: Cargo.toml  Dioxus.toml  README.md  notes.txt
assets/styling/: achievements_view.css  drinks.css  dynamic_background copy.css  dynamic_background.css  end_night_button.css  end_night_slider.css  history_view.css  main.css  navbar.css  settings.css  stats.css  tonight_achievements copy.css  tonight_achievements.css  witty_message.css
src/: main.rs  routes.rs
src/components/: drinks.rs  dynamic_background.rs  end_night_button.rs  mod.rs  navbar.rs  settings_form.rs  slider_button.rs  stats.rs  tonight_achievements.rs  witty_message.rs
src/components/utils/: mod.rs  witty_messages.rs
src/storage/: mod.rs  models.rs  storage.rs
src/storage/models/: achievements.rs  constants.rs  drink_history.rs  drink_session.rs  drink_type.rs  mod.rs  user.rs  witty_messages.rs
src/storage/storage/: drink_history.rs  error.rs  mod.rs  settings.rs  utilities.rs  utils.rs
src/views/: achievements.rs  history.rs  mod.rs  settings.rs  tonight.rs
