[package]
name = "booze-buddy"
version = "0.1.0"
authors = ["ksmit323 <ksmit323@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
dioxus = { version = "0.6.0", features = ["router"] }
dioxus-motion = { version = "0.3.1", features = ["desktop"] }
easer = "0.3.0"
lucide-dioxus = "1.1.0"
parking_lot = "0.12.3"
rand = "0.9.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
thiserror = "2.0.11"

[features]
default = []
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile", "dioxus-motion/desktop"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
